<resources>
    <string name="app_name">TradeIn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="near_by">Near By</string>
    <string name="publish">Publish</string>
    <string name="kind_sort">Kind Sort</string>
    <string name="person_center">Person Center</string>
    <string name="str_default_address">Default Address</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="str_login">Login</string>
    <string name="str_login_error">Forget Pass</string>
    <string name="str_register_now">Register Now</string>
    <string name="str_or">OR</string>
    <string name="str_phone">Phone</string>
    <string name="str_tablet">Tablet</string>
    <string name="str_computer">Computer</string>
    <string name="str_camera">Camera</string>
    <string name="str_bicycle">Bicycle</string>
    <string name="str_stationary">Stationary</string>
    <string name="str_book">Book</string>
    <string name="str_music">Music</string>
    <string name="str_latest_post">Latest Post</string>
    <string name="str_near_by">Same City</string>
    <string name="str_house">House</string>
    <string name="str_part_time">Part Time</string>
    <string name="str_school_message">School Message</string>
    <string name="str_please_login">Please Login</string>
    <string name="str_login_right">Login Right Now</string>
    <string name="str_my_post">My Post</string>
    <string name="str_my_infor">My Infor</string>
    <string name="str_introduce_to_friend">Introduce To Friend</string>
    <string name="str_my_qiugou">My QiuGou</string>
    <string name="str_my_favor">My Favor</string>
    <string name="str_setting">Setting</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="str_notice">Notice</string>
    <string name="exit_notice_click_more">Press Again To Exit</string>
    <string name="exit_notice_msg">Exit TradeIn?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_skip">Skip</string>
    <string name="string_cancel">Cancel</string>
    <string name="str_clear_cache">Clear Cache</string>
    <string name="str_tradein_rule">TradeIn Rule</string>
    <string name="str_help">Help</string>
    <string name="str_about_tradein">About TradeIn</string>
    <string name="str_picture_size">Picture Size</string>
    <string name="str_video_size">Video Size</string>
    <string name="str_ignore_person">Ignore Person</string>
    <string name="str_message_mind">Message Mind</string>
    <string name="activity_register_name">Rigster</string>
    <string name="activity_register_please_input_your_phone_number">Input PhoneNumber</string>
    <string name="activity_register_input_sms_check_number">Input CheckNum</string>
    <string name="activity_register_set_your_password">Setting PassWord</string>
    <string name="activity_register_check_string">Check</string>
    <string name="activity_register_get_check_sms">Get CheckNUm</string>
    <string name="activity_register_please_input_check_number">Input CheckNum</string>
    <string name="activity_register_please_input_password">Input Pass</string>
    <string name="activity_register_please_confirm_password">Sure Pass</string>
    <string name="activity_login">Login</string>
    <string name="str_please_input_username">Input UserName</string>
    <string name="str_back">Back</string>
    <string name="activity_forget_password_confirm_change">Sure Commit</string>
    <string name="activity_forget_password_found_password">Found Login Pass</string>
    <!--搜索-->
    <string name="str_search_hint">search</string>
    <string name="str_searchHistory">history</string>
    <string name="str_clearSearchHistory">clear</string>
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="str_all_kind">All Kind</string>
</resources>
