<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/albumback"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/showallphoto_headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/topBarBgColor"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/showallphoto_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:text="@string/album"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/showallphoto_headtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/photo"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/showallphoto_cancel"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:text="@string/camera_cancel"
            android:textColor="#fff"
            android:textSize="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/showallphoto_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/plugin_camera_bottom_bar">

        <Button
            android:id="@+id/showallphoto_ok_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/plugin_camera_ok_btn_state"
            android:gravity="center"
            android:text="@string/unfinished" />
    </RelativeLayout>

    <GridView
        android:id="@+id/showallphoto_myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/showallphoto_bottom_layout"
        android:layout_below="@id/showallphoto_headview"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:background="@color/albumback"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:verticalSpacing="10dp" />

    <ProgressBar
        android:id="@+id/showallphoto_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>