<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.tt.tradein.ui.activity.ForgetPassActivity">
    <RelativeLayout
        android:background="@color/topBarBgColor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_my_order_for_goods_top_height">
        <LinearLayout
            android:id="@+id/activity_forget_password_back_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_margin="5dp"
                android:src="@mipmap/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/str_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:text="@string/activity_forget_password_found_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_my_order_for_goods_activity_top_item_height">
        <TextView
            android:id="@+id/activity_forget_password_input_phone_number_textview"
            android:paddingLeft="@dimen/activity_my_order_for_goods_activity_top_item_padding"
            android:paddingRight="@dimen/activity_my_order_for_goods_activity_top_item_padding"
            android:textColor="@drawable/activity_my_order_for_goods_textview_color_selector"
            android:layout_marginLeft="@dimen/activity_my_order_for_goods_activity_top_item_margin_left"
            android:layout_centerVertical="true"
            android:text="@string/activity_register_please_input_your_phone_number"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/activity_home_fragment_imageview_margin"
            android:layout_toRightOf="@id/activity_forget_password_input_phone_number_textview"
            android:src="@mipmap/person_center_see_all"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/activity_forget_password_input_check_number_textview"
            android:paddingLeft="@dimen/activity_my_order_for_goods_activity_top_item_padding"
            android:paddingRight="@dimen/activity_my_order_for_goods_activity_top_item_padding"
            android:textColor="@drawable/activity_my_order_for_goods_textview_color_selector"
            android:text="@string/activity_register_input_sms_check_number"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/activity_home_fragment_imageview_margin"
            android:layout_toRightOf="@id/activity_forget_password_input_check_number_textview"
            android:src="@mipmap/person_center_see_all"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/activity_forget_password_input_password_textview"
            android:paddingLeft="@dimen/activity_my_order_for_goods_activity_top_item_padding"
            android:paddingRight="@dimen/activity_my_order_for_goods_activity_top_item_padding"
            android:textColor="@drawable/activity_my_order_for_goods_textview_color_selector"
            android:layout_marginRight="@dimen/activity_my_order_for_goods_activity_top_item_margin_left"
            android:text="@string/activity_register_set_your_password"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/activity_forget_password_input_phonenumber_ll"
        android:layout_marginRight="@dimen/activity_register_edittext_layout_margin"
        android:layout_marginTop="@dimen/activity_login_layout_margin"
        android:layout_marginLeft="@dimen/activity_register_edittext_layout_margin"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_forget_password_check_number_edittext"
            android:hint="@string/activity_register_please_input_your_phone_number"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_register_edittext_height" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/activity_forget_password_checknumber_input_ll"
        android:layout_marginRight="@dimen/activity_register_edittext_layout_margin"
        android:layout_marginTop="@dimen/activity_login_layout_margin"
        android:layout_marginLeft="@dimen/activity_register_edittext_layout_margin"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_forget_password_check_number_input_edittext"
            android:hint="@string/activity_register_please_input_check_number"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_register_edittext_height" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/colorWhite"
        android:id="@+id/activity_reinput_password_input_ll"
        android:layout_marginRight="@dimen/activity_register_edittext_layout_margin"
        android:layout_marginTop="@dimen/activity_login_layout_margin"
        android:layout_marginLeft="@dimen/activity_register_edittext_layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_forget_password_input_new_password_edittext"
            android:layout_marginTop="@dimen/activity_login_layout_margin"
            android:hint="@string/activity_register_please_input_password"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_register_edittext_height" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:background="@color/colorWhite"
        android:id="@+id/activity_reinput_confirm_password_input_ll"
        android:layout_marginRight="@dimen/activity_register_edittext_layout_margin"
        android:layout_marginTop="@dimen/activity_login_layout_margin"
        android:layout_marginLeft="@dimen/activity_register_edittext_layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginTop="@dimen/activity_login_layout_margin"
            android:id="@+id/activity_forget_password_confirm_input_new_password_edittext"
            android:hint="@string/activity_register_please_confirm_password"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_register_edittext_height" />
    </LinearLayout>
    <TextView
        android:textColor="@color/colorWhite"
        android:id="@+id/activity_forget_password_sure_textview"
        android:textSize="14sp"
        android:layout_marginLeft="@dimen/activity_login_btn_margin"
        android:layout_marginRight="@dimen/activity_login_btn_margin"
        android:layout_marginTop="@dimen/activity_login_btn_margin_top"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/activity_register_get_check_sms"
        android:background="@color/topBarBgColor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_login_btn_height" />
</LinearLayout>
